--- a/mounts/mounts.conf
+++ b/mounts/mounts.conf
@@ -1,3 +1,3 @@
-UserParameter=vfs.fs.mount[*],           sudo /etc/zabbix/_lin_zabbix_mod/mounts/mounts.sh $1
-UserParameter=vfs.mount.nofail[*],       sudo /etc/zabbix/_lin_zabbix_mod/mounts/nofail.sh $1
-UserParameter=vfs.mount.freez,           sudo /etc/zabbix/_lin_zabbix_mod/mounts/freez_mounts.sh
+UserParameter=vfs.fs.mount[*],           sudo /bin/bash /etc/zabbix/_lin_zabbix_mod/mounts/mounts.sh $1
+UserParameter=vfs.mount.nofail[*],       sudo /bin/bash /etc/zabbix/_lin_zabbix_mod/mounts/nofail.sh $1
+UserParameter=vfs.mount.freez,           sudo /bin/bash /etc/zabbix/_lin_zabbix_mod/mounts/freez_mounts.sh
